2013-11-26  Hirochika Asai  <asai@scyphus.co.jp>

    * las/arch/x86_64/reg.c: Moved register-related functions from
                             las/arch/x86_64/main.c
    * las/arch/x86_64/reg.h: Moved register-related definitions from
                             las/arch/x86_64/main.c


2013-11-25  Hirochika Asai  <asai@scyphus.co.jp>

    * las/arch/x86_64/main.c: Moved from las/arch/x86_64.c
    * las/arch/x86_64.c: Moved to las/arch/x86_64/main.c


2013-11-25  Hirochika Asai  <asai@scyphus.co.jp>

    * las/assembler.c: Implementing assembler
    * las/arch/x86_64.c: Added, implementing assembler
    * las/las.c: Implementing assembler
    * las/las.h: Implementing assembler

    * las/arch/x86_64.c: Added the description of XOR instruction


2013-11-20  Hirochika Asai  <asai@scyphus.co.jp>

    * las/parser.c: Fixed bugs in parse_expr_atom()


2013-11-19  Hirochika Asai  <asai@scyphus.co.jp>

    * las/instr.c: Aded; moved functions related to statements and instructions
                   from las/parser.c
    * las/instr.h: Added this header file corresponding to las/instr.c
    * las/parser.c: Implemented parser functions and moved some functions to
                    las/instr.c
    * las/parser.h: Changed the prototype declarations of parser functions
                    to return statements


2013-11-17  Hirochika Asai  <asai@scyphus.co.jp>

    * las/mvector.c: Added, a set of functions to implement mutable vector
    * las/mvector.h: Added this file with las/mvector.c

    * las/parser.h: Added


2013-11-16  Hirochika Asai  <asai@scyphus.co.jp>

    * las/vector.c: Added `const' modifier to the argument of vector_max_size()
    * las/vector.h: Added `const' modifier to the argument of vector_max_size()
    * las/parser.c: Added
    * las/expr.c: Moved parser functions to parser.c
    * las/expr.h: Moved parser functions to parser.c
    * las/las.h: Removed ineffective code


2013-11-12  Hirochika Asai  <asai@scyphus.co.jp>
