@@ -9,6 +9,7 @@
 
 #include "../../las.h"
 #include "reg.h"
+#include "eval.h"
 #include <stdlib.h>
 #include <string.h>
 
@@ -32,17 +33,6 @@ struct y {
     struct xxx *ptr;
 };
 
-typedef enum _val_type {
-    VAL_INT,
-} val_type_t;
-
-typedef struct _val {
-    val_type_t type;
-    union {
-        uint64_t i;
-    } u;
-} val_t;
-
 /* [base register + displacement + offset register * scalar multiplier] */
 typedef struct _operand_addr {
     /* Base register */
@@ -57,173 +47,8 @@ typedef struct _operand_addr {
 
 
 
-/*
- * Prototype declarations
- */
-static val_t * _eval_expr(expr_t *);
 
 
-/*
- * Evaluate var expression
- */
-val_t *
-_eval_expr_var(expr_t *expr)
-{
-    x86_64_reg_t reg;
-
-    reg = strtoreg(expr->u.var);
-    if ( REG_UNKNOWN == reg ) {
-        /* Symbol */
-    } else {
-        /* Register */
-    }
-
-    return NULL;
-}
-
-/*
- * Evaluate integer expression
- */
-val_t *
-_eval_expr_int(expr_t *expr)
-{
-    val_t *val;
-
-    val = malloc(sizeof(val_t));
-    if ( NULL == val ) {
-        return NULL;
-    }
-    val->type = VAL_INT;
-    val->u.i = expr->u.i;
-
-    return val;
-}
-
-/*
- * Evaluate operand
- */
-val_t *
-_eval_expr_op(expr_t *expr)
-{
-    val_t *val;
-    val_t *lval;
-    val_t *rval;
-    expr_t *expr0;
-    expr_t *expr1;
-
-    val = malloc(sizeof(val_t));
-    if ( NULL == val ) {
-        return NULL;
-    }
-
-    if ( FIX_PREFIX == expr->u.op.fix_type ) {
-        expr0 = vector_at(expr->u.op.args, 0);
-        lval = _eval_expr(expr0);
-        if ( NULL == lval ) {
-            free(val);
-            return NULL;
-        }
-        switch ( expr->u.op.type ) {
-        case OP_PLUS:
-            /* Do nothing */
-            break;
-        case OP_MINUS:
-            /* Minus */
-            val->u.i = -lval->u.i;
-            break;
-        case OP_TILDE:
-            /* Bit  */
-            val->u.i = ~lval->u.i;
-            break;
-        default:
-            ;
-        }
-    } else if ( FIX_INFIX == expr->u.op.fix_type ) {
-        expr0 = vector_at(expr->u.op.args, 0);
-        expr1 = vector_at(expr->u.op.args, 1);
-
-        lval = _eval_expr(expr0);
-        if ( NULL == lval ) {
-            free(val);
-            return NULL;
-        }
-        rval = _eval_expr(expr1);
-        if ( NULL == rval ) {
-            /* Free lval */
-            free(val);
-            free(lval);
-            return NULL;
-        }
-        switch ( expr->u.op.type ) {
-        case OP_PLUS:
-            val->type = VAL_INT;
-            val->u.i = lval->u.i + rval->u.i;
-            break;
-        case OP_MINUS:
-            val->type = VAL_INT;
-            val->u.i = lval->u.i - rval->u.i;
-            break;
-        case OP_MUL:
-            val->type = VAL_INT;
-            val->u.i = lval->u.i * rval->u.i;
-            break;
-        case OP_DIV:
-            val->type = VAL_INT;
-            val->u.i = lval->u.i / rval->u.i;
-            break;
-        default:
-            ;
-        }
-
-    }
-
-    return val;
-}
-
-
-/*
- * Evaluate the expression
- */
-static val_t *
-_eval_expr(expr_t *expr)
-{
-    val_t *val;
-
-    switch ( expr->type ) {
-    case EXPR_VAR:
-        val = _eval_expr_var(expr);
-        break;
-    case EXPR_INT:
-        val = _eval_expr_int(expr);
-        break;
-    case EXPR_OP:
-        val = _eval_expr_op(expr);
-        break;
-    }
-
-    return val;
-}
-
-/*
- * Convert expression to immediate value
- */
-void
-_expr_to_imm(expr_t *__restrict__ expr)
-{
-    val_t *val;
-
-    switch ( expr->type ) {
-    case EXPR_VAR:
-        val = _eval_expr_var(expr);
-        break;
-    case EXPR_INT:
-        val = _eval_expr_int(expr);
-        break;
-    case EXPR_OP:
-        val = _eval_expr_op(expr);
-        break;
-    }
-}
 
 /*
  * MOV (Vol. 2B 4-29)
@@ -343,7 +168,7 @@ _xor(operand_vector_t *operands)
             /* Expression */
         }
         expr = op->op.expr;
-        val = _eval_expr(expr);
+        val = x86_64_eval_expr(expr);
     }
 
     printf("XOR (#args = %zu)\n", mvector_size(operands));
